--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,8 @@ jobs:
           distribution: 'adopt'
       - name: Release Name
         run: echo building release ${GITHUB_REF_NAME}
+      - name: Set Gradle
+        run: chmod +x gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Publish package
