--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -101,7 +101,12 @@ jobs:
         cache-dependency-path: | # optional
             gradle/*.gradle*
             gradle/**/gradle-wrapper.properties
-        run: ./gradlew build --no-daemon  
+        #run: ./gradlew build --no-daemon  
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v3
+    - name: Build with Gradle
+      run: ./gradlew build            
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
