--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ coroutinesTest = "1.7.3"
 gson = "2.10.1"
 junit4 = "4.13.2"
 kotlin = "1.8.10"
+kotlinStdlibJdk8 = "1.8.0"
 mockitoKotlin = "5.1.0"
 mockk = "1.13.7"
 okhttp = "4.11.0"
@@ -20,6 +21,7 @@ retrofit = "2.9.0"
 androidx-coreKtx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
 
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
+kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlinStdlibJdk8" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTest" }
